# testlink-openqa-automator

./: .env  Dockerfile  README.md  alembic.ini  docker-compose.yaml  init.sql  pyproject.toml
alembic/: env.py
alembic/versions/: cef99fbf6d6c_create_test_cases_test_jobs.py
src/app/: database.py  main.py  models.py  schemas.py
src/app/api/: openqa.py  testlink.py
src/app/services/: openqa_runner.py  result_reporter.py  testlink_sync.py
src/app/workers/: celery_worker.py
